# artemis-ota-gr

./: .gitignore  CMakeLists.txt  README.md  artemislogon.C  artemislogon.C.in  thisartemis-training.sh
install/lib/: libtest_rdict.pcm
src-test/: CMakeLists.txt  TRandomTVDCClusterDataGenerator.cc  TRandomTVDCClusterDataGenerator.h  linkdef_user.h
steering/: vdc-cls-generator.yaml
